# fake-news-detector

./: README.md  bot.py  pyproject.toml  requirements.txt
data/processed/: dadosg1posanalise.csv  dadospos213analise.csv  dadosposanalise.csv
data/raw/: arquivo1.json  g1scrapy-true.json  g1scrapy.json  lupa.json
models/: modelofinal-en.joblib  modelofinal-pt-br.joblib  modelofinal.joblib
notebooks/: 00-AnaliseExploratoriapt-br.ipynb  00-AnaliseExploratóriaFakeNews.ipynb  01-PreparacaoETreinamento.ipynb  01-Preparando os dados.ipynb  02-TreinamentoDoModelo.ipynb
scripts-scrapy/: scrapy-g1-ff.py  scrapy-g1.py  scrapy-lupa.py
src/deployment/: bot.py
telegram-bot/: bot.py  requirements.txt
