[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alexsandro Lopes <alexsandro.lopes009@gmail.com>", "Claudiane Gomes <dsclaudianegomes@gmail.com>","Crislane Costa <crmariacosta@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyterlab = "^3.2.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
seaborn = "^0.11.2"
wordcloud = "^1.8.1"
Pillow = "^8.4.0"
matplotlib = "^3.4.3"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
